Send result expression to server generator. Receive series with connection TCP in Thread