@@ -11,6 +11,9 @@ import java.net.UnknownHostException;
 import java.nio.charset.StandardCharsets;
 import java.io.FileReader;
 import java.util.concurrent.TimeUnit;
+
+import javax.sound.midi.Receiver;
+
 import java.lang.*;
 import java.io.File;
 import java.time.*;
@@ -19,7 +22,26 @@ import java.util.*;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVParser;
 import org.apache.commons.csv.CSVRecord;
+
+import Broadcast.Discover;
+
 import java.net.*;
+
+import StandardObjects.*;
+import GEInterface.*;
+
+
+/*
+ * PORT MAPPING
+ * 
+ * 10000 - TCP CONNECTION WITH THE SLAVES
+ * 4445 - UDP BROADCAST SENDER
+ * 4446 - UDP BROADCAST RECEIVER
+ * 10010 - TCP CONNECTION WITH EXRPRESSION GENERATOR SERVER
+ * 
+ * */
+
+
 
 public class MasterControler {
 	
@@ -41,43 +63,68 @@ public class MasterControler {
 	public static void main(String args[]) throws UnknownHostException, IOException, InterruptedException{
 		
 		List<ServerInstance> servers_available; 
-		List<ExpressionResult> r_exp = new LinkedList<ExpressionResult>();
-		r_exp = Collections.synchronizedList(r_exp);//Syncronize the list with other threads
 		
-		LinkedList<Expression> exp_list;// = new LinkedList<Expression>();//get list from server
+		List<ExpressionResult> result_exp = new ArrayList<ExpressionResult>();
+		result_exp = Collections.synchronizedList(result_exp);//Synchronize the list with other threads
+		
+		List<Expression> exp_list = new LinkedList<Expression>();//Synchronize the list with the Expression receiver thread
+		exp_list = Collections.synchronizedList(exp_list);
+		
 		List<Client> c_control = new LinkedList<Client>();		
+		//-----------------------------------------------------------------------------
+
+		//Create a connection with the expression generator server
+		ExpressionReceiver expression_receiver;
+		do{
+			expression_receiver = new ExpressionReceiver(exp_list,"192.168.0.6");
+		}while(!expression_receiver.isConnected());
+		expression_receiver.start();
+		OutputStream out_stream;
+		ObjectOutputStream data_out;
+		//-----------------------------------------------------------------------------
 		
 		//Initiate the broadcast system. The sender system as well as IP receiver
 		Discover server_discover = new Discover();
 		server_discover.start();
 		
-		//Get the available servers to connect		
+		//-----------------------------------------------------------------------------
 		
+		//Get the available servers to connect		
 		servers_available = server_discover.get_available_servers();
 		while(servers_available.isEmpty()){
 			servers_available = server_discover.get_available_servers();			
 		}
+
+		//-----------------------------------------------------------------------------
 
 		ServerInstance tmp;
 		//Initiate connection with all available servers
 		while(!servers_available.isEmpty()){
 			tmp = servers_available.remove(0);
 			//Send the parameters: CSV path, Host IP, Port, List of result expressions
-			Client client = new Client(tmp.ip_address.getHostAddress().toString(),10000,r_exp);
+			Client client = new Client(tmp.ip_address.getHostAddress().toString(),10000,result_exp);
 			c_control.add(client);
 			client.start();
 		}
-		exp_list = get_expression();
 		
+		//-----------------------------------------------------------------------------
+		exp_list = get_expression();
 		Iterator<Client> i_control = c_control.iterator();
 		while(true){
+			/*
+			 * *
+			 * *
+			 */
+			//implementar algum tipo de BLOCK
+			
 			//Send the expressions to the server calculator
 			while(!exp_list.isEmpty()){
-
+				
+				//send the expressions for all servers (slaves) connected, like a circular list
 				if(i_control.hasNext()){
 					Client c = i_control.next();
 					if(c.isAlive())
-						c.send_expressions(exp_list.removeFirst());
+						c.send_expressions(exp_list.remove(0));
 					else{
 						c_control.remove(c);
 						break;
@@ -85,14 +132,21 @@ public class MasterControler {
 				}
 				else
 					i_control = c_control.iterator();
-				exp_list = get_expression();
+				
+				if(!result_exp.isEmpty()){
+					out_stream = expression_receiver.connection.getOutputStream();
+					data_out = new ObjectOutputStream(out_stream);
+					data_out.writeObject(result_exp.remove(0));data_out.flush();
+				}
 			}
 			if(c_control.isEmpty()){
 				break;
 			}
-			// SEND RESULT EXPRESSIONS TO EXPRESSION CLIENT
-			// UPDATE EXPRESSIONS FROM EXPRESSION CLIENT
-			
+			if(!result_exp.isEmpty()){
+				out_stream = expression_receiver.connection.getOutputStream();
+				data_out = new ObjectOutputStream(out_stream);
+				data_out.writeObject(result_exp.remove(0));data_out.flush();
+			}			
 		}
 	}
 }
